--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "cron": "^4.3.0",
     "dotenv": "^16.5.0",
     "express": "^4.21.0",
+    "mongodb": "^3.6.10",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
