--- a/backend/package.json
+++ b/backend/package.json
@@ -17,11 +17,12 @@
     "cors": "^2.8.5",
     "cron": "^4.3.0",
     "dotenv": "^16.5.0",
-    "express": "^4.21.0",
+    "express": "^4.21.2",
     "mongodb": "^3.6.10",
     "redis": "^5.5.6",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
